--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1"
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.4",
+    "redux-form": "^8.1.0",
+    "redux-promise": "^0.6.0",
+    "reselect": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
