--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "2.1.3"
   },
   "dependencies": {
+    "json-server": "^0.14.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
